fix: wrong background colors for options and popup

--- a/vite/src/css/options.css
+++ b/vite/src/css/options.css
@@ -1,4 +1,4 @@
 body {
     font-size: 24px;
-    background-color: rgb(205 80 255);
+    background-color: rgb(255 0 0);
 }
